# TensorRT-Plugin

./: Plugin接口介绍  README.md  custom.onnx  lCustomPlugin.cpp  lCustomPlugin.h
nocompile/: CMakeLists.txt  PointNetSample.cpp  read.md
nocompile/include/: Custom.cu  Custom.h  lCustomPlugin.cpp  lCustomPlugin.h
plugin/: README.md
